Name: haskarrow
Version: 0.1
Synopsis: A dialect of haskell with order of execution based on dependency resolution(DEREVAL)
Description: This haskell preprocessor will allow you to write "haskarrow" code.  Haskarrow is a semi-impertive language.  In a normal imperitive language evaluation happens top to bottom.  In haskarrow, each command is given a set of dependencies.  Commands are then excecuted in order of dependency resolution(DEREVAL). Those commands that have the fewest dependencies comming before those with the most.  The same haskarrow code may be compiled for either linear or concurrent execution.
Category:Language

License: GPL-3
License-file:COPYING 
Author: Timothy Hobbs
Maintainer: Timothy Hobbs <timothyhobbs@seznam.cz>
build-type:Simple

cabal-version: >= 1.6

library
 exposed-modules:
  Language.Haskarrow.Parser
  Language.Haskarrow.CodeGenerator
  Language.Haskarrow.CodeGeneratorConstants
  Language.Haskarrow.Types
  Language.Haskarrow.DependencyResolver

 build-depends:
  base       < 5   ,
  her-lexer  >=0.1 ,
  split      >=0   ,
  cpphs      >=1.13
 
Executable haskarrowPrecompiler
 build-depends:
  base<5,
  containers >=0,
  directory  >=1.1,
  cmdargs    >=0.9.5
 Main-is: haskarrowPrecompiler.lhs
 Extensions: DeriveDataTypeable

source-repository head
 type:    git 
 location: https://github.com/timthelion/haskarrow.git

